# stonepapersessior

./: .gitattributes  .gitignore  ON_CHAIN_VERIFICATION.md  README.md  TESTING.md  fix-line-endings.ps1  run.bash  wavehack
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/Controls/: index.jsx  styles.module.css
client/src/components/PlayerOne/: index.jsx  styles.module.css
client/src/components/PlayerTwo/: index.jsx  styles.module.css
client/src/context/: LineraContext.js
client/src/pages/Home/: index.jsx  styles.module.css
client/src/pages/Result/: index.jsx  styles.module.css
client/src/pages/Room/: index.jsx  styles.module.css
stone-paper-scissors/: Cargo.toml
stone-paper-scissors/src/: contract.rs  lib.rs  service.rs  state.rs
